[package]
name = "axum-prehandle"
description = "Prehandle for axum"
version = "0.1.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
documentation = "https://docs.rs/axum-prehandle"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = '0.5'
